# researchFlowAgent

./: .env.example  .gitignore  CONDA_QUICKSTART.md  LICENSE  README.md  alembic.ini  compose.yaml  environment.yml  pyproject.toml
.github/workflows/: ci.yml
backend/: Dockerfile
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_initial.py  0002_embedding_index_profile.py
backend/app/: __init__.py  container.py  main.py  mcp_server.py  schemas.py
backend/app/agent/: __init__.py  workflow.py
backend/app/api/: dependencies.py  routes.py
backend/app/core/: __init__.py  config.py  errors.py  logging.py
backend/app/db/: models.py  (+1 more)
backend/tests/: __init__.py  conftest.py  doubles.py  test_answer_evaluation.py  test_api_flow.py  test_embedding_rag.py  test_evaluation.py  test_evaluation_generation.py  test_evaluation_generation_resilience.py  test_pdf.py  test_provider_modes.py  test_safe_sql.py  test_tools.py
demo/: experiment_metrics.csv
demo/evaluation/: 15-paper-cases.jsonl  15-paper-test-cases.jsonl  retrieval_cases.jsonl
docs/: architecture.md  evaluation-15-paper-test.md  evaluation-baseline.md  evaluation.md  interview.md  project-structure.md
docs/agent-handoffs/: code-provenance.md  deepseek-v4-answer-evaluation.md
docs/learning/: 01-engineering-foundation.md  02-fastapi-llm.md  03-paper-ingestion.md  04-traceable-rag.md  05-tool-calling.md  06-safe-sql.md  07-langgraph.md  08-web-search.md  09-mcp.md  10-react-workbench.md  11-deployment-interview.md  README.md
frontend/: Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
frontend/src/: App.test.tsx  App.tsx  api.test.ts  api.ts  main.tsx  styles.css  types.ts
scripts/: run-evaluation.ps1  start-backend.ps1  test-demo.ps1
(+29 files in other folders)
