[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "researchflow-agent"
version = "0.1.0"
description = "A traceable research workflow agent for papers and technical documents."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "aiosqlite>=0.20,<1",
  "alembic>=1.14,<2",
  "asyncpg>=0.30,<1",
  "dashscope>=1.26,<2",
  "fastapi>=0.115,<1",
  "httpx>=0.28,<1",
  "langgraph>=0.3,<2",
  "llama-index-core>=0.14.23,<1",
  "llama-index-vector-stores-qdrant>=0.10.1,<1",
  "mcp>=1.12,<2",
  "openai>=1.60,<3",
  "pydantic>=2.10,<3",
  "pydantic-settings>=2.7,<3",
  "pypdfium2>=5.9,<6",
  "pypdf>=5.1,<7",
  "python-multipart>=0.0.20,<1",
  "qdrant-client>=1.13,<2",
  "rapidocr-onnxruntime>=1.4,<2",
  "sqlalchemy>=2.0.37,<3",
  "sqlglot>=26,<30",
  "sse-starlette>=2.2,<4",
  "tavily-python>=0.5,<1",
  "tiktoken>=0.8,<1",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.14,<2",
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.25,<1",
  "pytest-cov>=6,<8",
  "reportlab>=4.2,<5",
  "ruff>=0.9,<1",
]

[project.scripts]
researchflow-mcp = "app.mcp_server:run_stdio"
researchflow-eval = "app.evaluation.cli:main"
researchflow-generate-eval = "app.evaluation.generate_cases:main"

[tool.hatch.build.targets.wheel]
packages = ["backend/app"]

[tool.pytest.ini_options]
addopts = "-q --disable-warnings"
asyncio_mode = "auto"
pythonpath = ["backend"]
testpaths = ["backend/tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
warn_unused_ignores = true
check_untyped_defs = true
no_implicit_optional = true

